--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,19 +1,25 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  background-color: #762be2;
+  background-image: radial-gradient( rgba(255,0,255,.3), rgba(0,0,255,.05) );
+  /* background-image: radial-gradient( rgba(255,0,255,.20), rgba(0,0,255,.05), rgba(255,0,255,.20)); */
+  /* background-image: linear-gradient(to right, rgba(255,0,255,.5) , rgba(0,0,255,0.1)); */
+  color: white;
+  overflow: auto;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -35,4 +41,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
