--- a/frontend/src/components/CreateRoom.css
+++ b/frontend/src/components/CreateRoom.css
@@ -1,28 +1,22 @@
-.join_room {
+.create_room {
     height: 100%;
     width: 100%;
     /* background-color: #762be2; */
     align-items: center;
     display: inline-flex;
     flex-direction: column;
-    justify-content: center
+    justify-content: center;
 }
-.room_item {
-    background-color: #007bff;
+.create_room_element {
+    /* background-color: #007bff; */
     /* background-color: rgba(0,0,255,.5); */
     /* background-image: radial-gradient( rgba(255,0,255,1), rgba(0,0,255,1) ); */
     /* background-image: linear-gradient(to left, rgba(0,0,255,.5) , rgba(255,0,255,1)); */
-    padding: 5px;
+    /* padding: 5px;
     border-radius: 5px;
-    width: 230px;
-    margin: -5px;
     color: white;
     text-decoration: none;
-    text-align: center;
-}
-
-.room_item:hover {
-    transform:scale(1.1,1.1);
-    /* -webkit-transform:scale(1.3,1.3);
-    -moz-transform:scale(1.3,1.3); */
+    text-align: center; */
+    width: 250px;
+    margin: 6px;
 }
